--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="conteinerLeft">
 
-            <div class="logo"></div>
+            <div class="logo"><img src="" alt=""></div>
             <div class="navi"></div>
             <div class="playlist"></div>
             <div class="install"></div>
