--- a/index.html
+++ b/index.html
@@ -15,10 +15,30 @@
 
         <div class="conteinerLeft">
 
-            <div class="logo"><img src="" alt=""></div>
-            <div class="navi"></div>
-            <div class="playlist"></div>
-            <div class="install"></div>
+            <div class="logo"><img src="./img/logo.svg" alt=""></div>
+            
+            <div class="navi">
+                <i class="fa-solid fa-house"></i><span>Home</span>
+                <br><i class="fa-solid fa-magnifying-glass"></i> <span> Cerca</span>
+                <br><i class="fa-solid fa-book"></i> <span>La tua libreria</span>
+            </div>
+            <div class="playlist">
+                <h3>PLAYLIST</h3>
+                <p id="playlistBig"> <i class="fa-solid fa-square-plus"></i> Crea Playlist</p>
+                <p>Nome Playlist</p>
+                <p>Nome Playlist</p>
+                <p>Nome Playlist</p>
+                <p>Nome Playlist</p>
+                <p>Nome Playlist</p>
+                <p>Nome Playlist</p>
+                <p>Nome Playlist</p>
+            </div>
+
+            <div class="install">
+                <button><i class="fa-solid fa-arrow-down"></i></button><span>Installa app</span>
+                <hr>
+                <i class="fa-regular fa-circle-user"></i><b>Jhon Doe</b>
+            </div>
 
         </div>
 
@@ -32,7 +52,7 @@
 
     </div>
 
-<footer>3</footer>
+    <footer>3</footer>
     
 </body>
 </html>
