--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <div class="conteinerMain">
 
+        <!-- SIDEBAR -->
         <div class="conteinerLeft">
 
             <div class="logo"><img src="./img/logo.svg" alt=""></div>
@@ -43,10 +44,27 @@
         </div>
 
         <div class="conteinerRight">
+            <!-- HEADER -->
+            <header>
+                <button>EFFETTUA L'UPPGRADE</button>
+            </header>
 
-            <header></header>
-            <nav></nav>
-            <main></main>
+            <main>
+                <!-- NAV -->
+                <nav>
+                    <div class="boxNav"> <a href="">IN EVIDENZA</a> </div>
+                    <div class="boxNav"> <a href="">PODCAST</a> </div>
+                    <div class="boxNav"> <a href="">CLASSIFICHE</a> </div>
+                    <div class="boxNav"> <a href="">GENERI E MOOD</a> </div>
+                    <div class="boxNav"> <a href="">NUOVE USCITE</a> </div>
+                    <div class="boxNav"> <a href="">SCOPRI</a> </div>
+                </nav>
+
+                <!-- SECTION1 -->
+                <section>
+                    
+                </section>
+            </main>
 
         </div>
 
