--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
         </div>
 
         <div class="conteinerRight">
+
             <!-- HEADER -->
             <header>
-                <button>EFFETTUA L'UPPGRADE</button>
+                <button>EFFETTUA L'UPGRADE</button>
             </header>
 
             <main>
+
                 <!-- NAV -->
                 <nav>
                     <div class="boxNav"> <a href="">IN EVIDENZA</a> </div>
@@ -60,10 +62,61 @@
                     <div class="boxNav"> <a href="">SCOPRI</a> </div>
                 </nav>
 
-                <!-- SECTION1 -->
-                <section>
-                    
-                </section>
+                <div class="conteiner">
+                    <h1>Recently played</h1>
+
+                    <!-- SECTION1 -->
+                    <section class="flexWrap">
+                        <div class="card">
+                            <div class="picFilm"><img src="./img/metal_lifting.jpg" alt=""></div>
+                            <div class="infoFilm">
+                                <h3>Heavy Metal</h3>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="picFilm"><img src="./img/stranger.jpeg" alt=""></div>
+                            <div class="infoFilm">
+                                <h3>Stranger Things, Vol.1 (a Netflix Originals Series Soundtrack)</h3>
+                                <p>Kyle Dixon & Michael Stein</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="picFilm"><img src="./img/aquietplace.jpeg" alt=""></div>
+                            <div class="infoFilm">
+                                <h3>A quiet place</h3>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="picFilm"><img src="./img/split.jpeg" alt=""></div>
+                            <div class="infoFilm">
+                                <h3>Split</h3>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="picFilm"><img src="./img/cure.jpeg" alt=""></div>
+                            <div class="infoFilm">
+                                <h3>A cure for wellnes</h3>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="picFilm"><img src="./img/sinister.jpeg" alt=""></div>
+                            <div class="infoFilm">
+                                <h3>Sinister</h3>
+                                <p>Subtitle</p>
+                            </div>
+                        </div>
+
+                    </section>
+                </div>
             </main>
 
         </div>
