--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="logo"><img src="./img/logo.svg" alt=""></div>
             
             <div class="navi">
-                <i class="fa-solid fa-house"></i><span>Home</span>
-                <br><i class="fa-solid fa-magnifying-glass"></i> <span> Cerca</span>
-                <br><i class="fa-solid fa-book"></i> <span>La tua libreria</span>
+                <img src="./img/home.svg" alt=""><span>Home</span>
+                <br><img src="./img/search.svg" alt=""><span>Cerca</span>
+                <br><img src="./img/libreria.svg" alt=""><span>La tua libreria</span>
             </div>
             <div class="playlist">
                 <h3>PLAYLIST</h3>
@@ -38,19 +38,19 @@
             <div class="install">
                 <button><i class="fa-solid fa-arrow-down"></i></button><span>Installa app</span>
                 <hr>
-                <i class="fa-regular fa-circle-user"></i><b>Jhon Doe</b>
+                <img src="./img/profile.svg" alt=""><b>Jhon Doe</b>
             </div>
 
         </div>
 
         <div class="conteinerRight">
 
+            <main>
+
             <!-- HEADER -->
             <header>
                 <button>EFFETTUA L'UPGRADE</button>
             </header>
-
-            <main>
 
                 <!-- NAV -->
                 <nav>
@@ -113,6 +113,40 @@
                                 <h3>Sinister</h3>
                                 <p>Subtitle</p>
                             </div>
+                        </div>
+
+                    </section>
+
+                    <h1>Creato per Jhon Doe</h1>
+                    <p>Più ascolti, più accurati saranno i suggerimenti</p>
+                    
+                    <!-- SECTION2 -->
+                    <section class="flexWrap">
+                        <div class="card">
+                            <div class="picMusic"><img src="./img/radar.jpeg" alt=""></div>
+                            <div class="infoMusic"><h3>Release Radar</h3></div>
+                        </div>
+
+                        <div class="card">
+                            <div class="picMusic"><img src="./img/mixdaily.jpeg" alt=""></div>
+                            <div class="infoMusic"><h3>Daily Mix 1</h3></div>
+                        </div>
+
+                    </section>
+
+                    <h1>Artisti più popolari</h1>
+                    <p>Più ascolti, più accurati saranno i suggerimenti</p>
+
+                     <!-- SECTION3 -->
+                    <section class="flexWrap">
+                        <div class="card">
+                            <div class="picMusic_circle"><img src="./img/youg.jpeg" alt=""></div>
+                            <div class="infoMusic"><h3>Lana del Rey</h3></div>
+                        </div>
+
+                        <div class="card">
+                            <div class="picMusic_circle"><img src="./img/einaudi.jpeg" alt=""></div>
+                            <div class="infoMusic"><h3>Ludovico Einaudi</h3></div>
                         </div>
 
                     </section>
