--- a/index.html
+++ b/index.html
@@ -22,26 +22,28 @@
             <div class="logo"><img src="./img/logo.svg" alt=""></div>
             
             <div class="navi">
-                <img src="./img/home.svg" alt=""><span>Home</span>
-                <br><img src="./img/search.svg" alt=""><span>Cerca</span>
-                <br><img src="./img/libreria.svg" alt=""><span>La tua libreria</span>
+                <img src="./img/home.svg" alt=""><a>Home</a>
+                <br><img src="./img/search.svg" alt=""><a>Cerca</a>
+                <br><img src="./img/libreria.svg" alt=""><a>La tua libreria</a>
             </div>
             <div class="playlist">
                 <h3>PLAYLIST</h3>
-                <p id="playlistBig"> <i class="fa-solid fa-square-plus"></i> Crea Playlist</p>
-                <p>Nome Playlist</p>
-                <p>Nome Playlist</p>
-                <p>Nome Playlist</p>
-                <p>Nome Playlist</p>
-                <p>Nome Playlist</p>
-                <p>Nome Playlist</p>
-                <p>Nome Playlist</p>
+                <button id="buttonNone">+</button><a id="playlistBig">Crea Playlist</a>
+                <br><a>Nome Playlist</a>
+                <br><a>Nome Playlist</a>
+                <br><a>Nome Playlist</a>
+                <br><a>Nome Playlist</a>
+                <br><a>Nome Playlist</a>
+                <br><a>Nome Playlist</a>
+                <br><a>Nome Playlist</a>
             </div>
 
             <div class="install">
                 <button><i class="fa-solid fa-arrow-down"></i></button><span>Installa app</span>
                 <hr>
-                <img src="./img/profile.svg" alt=""><b>Jhon Doe</b>
+                <div class="account">
+                    <img src="./img/profile.svg" alt=""><p>Jhon Doe</p>
+                </div>
             </div>
 
         </div>
@@ -160,7 +162,11 @@
 
     </div>
 
-    <footer>3</footer>
+    <footer>
+        <div class="footetLeft"></div>
+        <div class="footerCenter"></div>
+        <div class="footerRight"></div>
+    </footer>
     
 </body>
 </html>
