work in progress footer

--- a/index.html
+++ b/index.html
@@ -163,9 +163,38 @@
     </div>
 
     <footer>
-        <div class="footetLeft"></div>
-        <div class="footerCenter"></div>
-        <div class="footerRight"></div>
+        <div class="conteinerFood">
+            <div class="footerLeft">
+                <div class="songImg"><img src="./img/sinister.jpeg" alt=""></div>
+                <div class="songName">
+                    <h4>Sinister</h4>
+                    <p>Brano Nome</p>
+                </div>
+                <div class="save">
+                    <i class="fa-regular fa-heart"></i>
+                    <br><i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+            <div class="footerCenter">
+                <div class="play">
+                    <div class="boxPlay"><i class="fa-solid fa-shuffle"></i></div>
+                    <div class="boxPlay"><i class="fa-solid fa-backward-step"></i></div>
+                    <div class="boxPlayBig"><i class="fa-sharp fa-regular fa-circle-play"></i></div>
+                    <div class="boxPlay"><i class="fa-solid fa-forward-step"></i></div>
+                    <div class="boxPlay"><i class="fa-solid fa-rotate-left"></i></div>
+                </div>
+                <div class="time">
+                    <div class="startTime"><span>0:25</span></div>
+                    <div class="lineTime"></div>
+                    <div class="endTime"><span>4:35</span></div>
+                </div>
+            </div>
+            <div class="footerRight">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-volume-high"></i>
+            </div>
+        </div>
     </footer>
     
 </body>
