work in progress footer

--- a/index.html
+++ b/index.html
@@ -185,14 +185,24 @@
                 </div>
                 <div class="time">
                     <div class="startTime"><span>0:25</span></div>
-                    <div class="lineTime"></div>
-                    <div class="endTime"><span>4:35</span></div>
+                    <div class="lineTime">
+                        <div class="lineGrey"></div>
+                        <div class="lineWhite"></div>
+                    </div>
+                    <div class="startTime"><span>4:35</span></div>
                 </div>
             </div>
             <div class="footerRight">
-                <i class="fa-solid fa-bars"></i>
-                <i class="fa-solid fa-desktop"></i>
-                <i class="fa-solid fa-volume-high"></i>
+                <div class="optionAudio">
+                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-solid fa-desktop"></i>
+                    <i class="fa-solid fa-volume-high"></i>
+                </div>
+                <div class="audio">
+                    <div class="audioGrey"></div>
+                    <div class="audioWhite"></div>
+                </div>
+
             </div>
         </div>
     </footer>
