hover work in progress

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <!-- HEADER -->
             <header>
-                <button>EFFETTUA L'UPGRADE</button>
+                <button id="callToAction">EFFETTUA L'UPGRADE</button>
             </header>
 
                 <!-- NAV -->
