--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
                     <!-- SECTION1 -->
                     <section class="flexWrap">
                         <div class="card">
-                            <div class="picFilm"><img src="./img/metal_lifting.jpg" alt=""></div>
+                            <div class="picFilm cardHover">
+                                <img src="./img/metal_lifting.jpg" alt="">
+        <!--qui-->              <div class="hoverPlay"><i class="fa-solid fa-circle-play"></i></div>
+                            </div>
                             <div class="infoFilm">
                                 <h3>Heavy Metal</h3>
                                 <p>Subtitle</p>
