--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
                         </div>
 
                         <div class="card">
-                            <div class="picFilm"><img src="./img/stranger.jpeg" alt=""></div>
+                            <div class="picFilm cardHover">
+                                <img src="./img/stranger.jpeg" alt="">
+                                <div class="hoverPlay"><i class="fa-solid fa-circle-play"></i></div>
+                            </div>
                             <div class="infoFilm">
                                 <h3>Stranger Things, Vol.1 (a Netflix Originals Series Soundtrack)</h3>
                                 <p>Kyle Dixon & Michael Stein</p>
@@ -92,7 +95,10 @@
                         </div>
 
                         <div class="card">
-                            <div class="picFilm"><img src="./img/aquietplace.jpeg" alt=""></div>
+                            <div class="picFilm cardHover">
+                                <img src="./img/aquietplace.jpeg" alt="">
+                                <div class="hoverPlay"><i class="fa-solid fa-circle-play"></i></div>
+                            </div>
                             <div class="infoFilm">
                                 <h3>A quiet place</h3>
                                 <p>Subtitle</p>
@@ -100,7 +106,10 @@
                         </div>
 
                         <div class="card">
-                            <div class="picFilm"><img src="./img/split.jpeg" alt=""></div>
+                            <div class="picFilm cardHover">
+                                <img src="./img/split.jpeg" alt="">
+                                <div class="hoverPlay"><i class="fa-solid fa-circle-play"></i></div>
+                            </div>
                             <div class="infoFilm">
                                 <h3>Split</h3>
                                 <p>Subtitle</p>
@@ -108,15 +117,21 @@
                         </div>
 
                         <div class="card">
-                            <div class="picFilm"><img src="./img/cure.jpeg" alt=""></div>
-                            <div class="infoFilm">
+                            <div class="picFilm cardHover">
+                                <img src="./img/cure.jpeg" alt="">
+                                <div class="hoverPlay"><i class="fa-solid fa-circle-play"></i></div>
+                            </div>
+                                <div class="infoFilm">
                                 <h3>A cure for wellnes</h3>
                                 <p>Subtitle</p>
                             </div>
                         </div>
 
                         <div class="card">
-                            <div class="picFilm"><img src="./img/sinister.jpeg" alt=""></div>
+                            <div class="picFilm cardHover">
+                                <img src="./img/sinister.jpeg" alt="">
+                                <div class="hoverPlay"><i class="fa-solid fa-circle-play"></i></div>
+                            </div>
                             <div class="infoFilm">
                                 <h3>Sinister</h3>
                                 <p>Subtitle</p>
@@ -131,7 +146,9 @@
                     <!-- SECTION2 -->
                     <section class="flexWrap">
                         <div class="card">
-                            <div class="picMusic"><img src="./img/radar.jpeg" alt=""></div>
+                            <div class="picMusic">
+                                <img src="./img/radar.jpeg" alt="">
+                            </div>
                             <div class="infoMusic"><h3>Release Radar</h3></div>
                         </div>
 
