--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 
                 <!-- NAV -->
                 <nav>
-                    <div class="boxNav"> <a href="">IN EVIDENZA</a> </div>
-                    <div class="boxNav"> <a href="">PODCAST</a> </div>
-                    <div class="boxNav"> <a href="">CLASSIFICHE</a> </div>
-                    <div class="boxNav"> <a href="">GENERI E MOOD</a> </div>
-                    <div class="boxNav"> <a href="">NUOVE USCITE</a> </div>
-                    <div class="boxNav"> <a href="">SCOPRI</a> </div>
+      <!--qui-->    <div class="boxNav"> <a href="">IN EVIDENZA</a> <br><hr class="lineGreen"> </div>
+                    <div class="boxNav"> <a href="">PODCAST</a> <br><hr class="lineGreen"> </div>
+                    <div class="boxNav"> <a href="">CLASSIFICHE</a> <br><hr class="lineGreen"> </div>
+                    <div class="boxNav"> <a href="">GENERI E MOOD</a> <br><hr class="lineGreen"> </div>
+                    <div class="boxNav"> <a href="">NUOVE USCITE</a> <br><hr class="lineGreen"> </div>
+                    <div class="boxNav"> <a href="">SCOPRI</a> <br><hr class="lineGreen"> </div>
                 </nav>
 
                 <div class="conteiner">
