--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <!-- NAV -->
                 <nav>
-      <!--qui-->    <div class="boxNav"> <a href="">IN EVIDENZA</a> <br><hr class="lineGreen"> </div>
+                    <div class="boxNav"> <a href="">IN EVIDENZA</a> <br><hr class="lineGreen"> </div>
                     <div class="boxNav"> <a href="">PODCAST</a> <br><hr class="lineGreen"> </div>
                     <div class="boxNav"> <a href="">CLASSIFICHE</a> <br><hr class="lineGreen"> </div>
                     <div class="boxNav"> <a href="">GENERI E MOOD</a> <br><hr class="lineGreen"> </div>
