--- a/index.html
+++ b/index.html
@@ -256,7 +256,9 @@
                     <div class="startTime"><span>0:25</span></div>
                     <div class="lineTime">
                         <div class="lineGrey"></div>
-                        <div class="lineWhite"></div>
+                        <div class="lineWhite">
+                            <!-- <div class="ball"></div> -->
+                        </div>
                     </div>
                     <div class="startTime"><span>4:35</span></div>
                 </div>
