--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <div class="lineTime">
                         <div class="lineGrey"></div>
                         <div class="lineWhite">
-                            <!-- <div class="ball"></div> -->
+                            <div class="ball"></div>
                         </div>
                     </div>
                     <div class="startTime"><span>4:35</span></div>
@@ -271,7 +271,9 @@
                 </div>
                 <div class="audio">
                     <div class="audioGrey"></div>
-                    <div class="audioWhite"></div>
+                    <div class="audioWhite">
+                        <div class="ball2"></div>
+                    </div>
                 </div>
 
             </div>
